Issue #91: Reduce gap between views admin title and views displays. Fixes #91.

--- a/styles/base/_layers.scss
+++ b/styles/base/_layers.scss
@@ -20,8 +20,7 @@
 .module-filter-update-status-form .table-filter,
 #views-entity-list,
 .admin.my-workbench,
-.media-library-views-form
-{
+.media-library-views-form {
   margin-top: 0;
   box-shadow: var(--gin-shadow-l1);
   border-radius: var(--gin-border-l);
@@ -43,8 +42,7 @@
 #views-entity-list,
 .module-filter-update-status-form .table-filter,
 .admin.my-workbench,
-.media-library-views-form
-{
+.media-library-views-form {
   width: 100%;
   padding: var(--gin-spacing-s);
   background: var(--gin-bg-layer);
@@ -65,7 +63,9 @@
 // Don't display the gin-layer-wrapper styles when there is another nested
 // inside of it (e.g. the configuration landing page, views, etc.).
 .gin-layer-wrapper {
+
   &:has(> .view),
+  &:has(> .views-admin),
   &:has(> .admin-list),
   &:has(> .admin) {
     border: none;
